--- a/styles/style.css
+++ b/styles/style.css
@@ -8,15 +8,20 @@ body {
 }
 main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items:center;
+
 }
 .container {
   background-color: #ffffff;
   width: 870px;
-  padding: 30px;
+  padding:30px;
+  margin-top: 21px;
+  border-radius: 5px;
 }
 hr {
   border: 1px solid #d1d1d1;
+  margin-bottom: 27px;
 }
 
 /* top players style */
@@ -47,7 +52,33 @@ hr {
   font-size: 18px;
 }
 /* top blog styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2 ,1fr);
+    grid-row-gap:26px;
+}
+.blog{
+    display: flex;
+}
 .blog .thumbnail img {
   width: 177px;
   height: 117px;
 }
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+   font-size: 20px; 
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562eff;
+}
+/* courses styles */
+
